<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KitchApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="despensa">Despensa</string>
    <string name="lista_compra">Lista de la Compra</string>
    <string name="recetario">Recetario</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="localizacion">Localizacion</string>
    <string name="title_activity_acceso_despensa">AccesoDespensaActivity</string>
    <string name="lacteos">Lacteos</string>
    <string name="frutasVerduras">Frutas y Verduras</string>
    <string name="panBolleria">Pan y Bolleria</string>
    <string name="bebidas">Bebidas</string>
    <string name="carnes">Carnes</string>
    <string name="pescados">Pescados</string>
    <string name="condimentos">Condimentos</string>
    <string name="salsas">Salsas</string>
    <string name="pastasArroces">Pastas y Arroces</string>
    <string name="congelados">Congelados</string>
    <string name="drogueria">Droguería</string>
    <string name="varios">Varios</string>
    <string name="anadirProducto">Añadir Producto</string>
    <string name="buscarProducto">Buscar Producto</string>
    <string name="title_activity_list_item_layout">List_item_layout</string>
    <string name="title_activity_add_despensa">AddDespensa</string>
    <string name="title_activity_modificar_producto_despensa">ModificarProductoDespensaActivity</string>
    <string name="save">Guardar</string>
    <string name="save2">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="cancel2">Cancelar</string>
    <string name="ok">OK</string>
    <string name="add_manually">Añadir Manualmente</string>
    <string name="nameProduct">Nombre Producto</string>
    <string name="cantProduct">Cantidad Producto</string>
    <string name="add">Añadir</string>
    <string name="back">Volver</string>
    <string name="title_activity_mostrar_productos_categoria">MostrarProductosCategoriaActivity</string>
    <string name="title_activity_add_manualmente">AddManualmenteActivity</string>
    <string name="nameOfList">Añadir nuevaLista</string>
    <string name="addProduct">Añadir artículo</string>
    <string name="create">Crear</string>
    <string name="remove">Eliminar</string>
    <string name="product1">Articulo1</string>
    <string name="CantProducts">Articulos</string>
    <string name="listadelacompra">Lista de la compra</string>
    <string name="accept">Aceptar</string>
    <string name="delete">Eliminar</string>
<<<<<<< HEAD
    <string name="categorySelected">Seleccionar categoría y unidades</string>
=======
>>>>>>> Rama-Lorena-Android
    <string name="search">Buscar</string>
    <string name="manual">Manual</string>
    <string name="voice">Voz</string>
    <string name="barcode">Barras</string>
    <string name="logout">Salir</string>
    <string name="home">Inicio</string>
<<<<<<< HEAD
    <string name="dialog_header">Nombre de la lista</string>
=======
    <string name="options">Opciones</string>
    <string name="dialog_header">Nombre de la lista</string>
    <string name="categorySelected">Seleccionar categoría</string>
>>>>>>> Rama-Lorena-Android
    <string name="topTen">Top Ten</string>
    <string name="recipes">Recetas</string>
    <string name="favourite">Favoritos</string>
    <string name="headerIngredients">Ingredientes</string>
    <string name="headerPreparation">Preparación</string>
    <string name="unitsSelected">Seleccionar unidades</string>
    <string name="buyed">Comprado</string>
   
</resources>
