<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kitchapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/manual"
        android:orderInCategory="100"
        android:title="@string/manual"
        kitchapp:actionViewClass="android.support.v7.widget.SearchView"
        kitchapp:showAsAction="always"/>
    <item
        android:id="@+id/voice"
        android:icon="@drawable/ic_action_mic"
        android:orderInCategory="100"
        android:title="@string/voice"
        kitchapp:showAsAction="always"/>
    <item
        android:id="@+id/barcode"
        android:icon="@drawable/ic_action_view_as_list"
        android:orderInCategory="100"
        android:title="@string/barcode"
        kitchapp:showAsAction="always"/>
    <item 
        android:id="@+id/home"
        android:orderInCategory="100"
        kitchapp:showAsAction="always|withText"
        android:icon="@drawable/ic_action_dial_pad"
        android:title="@string/home"/>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_action_forward"
        android:orderInCategory="100"
        android:title="@string/logout"
        kitchapp:showAsAction="always|withText"/>

</menu>