<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:kitchapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_action_important"
        android:orderInCategory="100"
        android:title="@string/favourite"
        kitchapp:showAsAction="always"/>
    
</menu>
=======
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:kitchapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_action_important"
        android:orderInCategory="100"
        android:title="@string/favourite"
        kitchapp:showAsAction="always"/>
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_action_dial_pad"
        android:orderInCategory="100"
        android:title="@string/home"
        kitchapp:showAsAction="always|withText"/>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_action_forward"
        android:orderInCategory="100"
        android:title="@string/logout"
        kitchapp:showAsAction="always|withText"/> 

</menu>
>>>>>>> Rama-Lorena-Android
