<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/categorySelected"
            android:textColor="@color/pink"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >

        <EditText
            android:id="@+id/name_prod"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/pink"
            android:textColor="@color/pink"
            android:hint="@string/nameProduct"
            android:padding="10dp"
            android:layout_margin="10dp">

            <requestFocus />
        </EditText>
        
        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/lightGray"
            android:drawSelectorOnTop="true"
            android:padding="10dp"
            android:layout_margin="10dp" />
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/qty_prod"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/pink"
            android:textColor="@color/pink"
            android:hint="@string/cantProduct" 
            android:inputType="number"
            android:padding="10dp"
            android:layout_margin="10dp">

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/spinnerUnitsList"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/lightGray"
            android:drawSelectorOnTop="true" 
            android:padding="10dp"
            android:layout_margin="10dp"/>
    </LinearLayout>

</LinearLayout>