<ScrollView
<<<<<<< HEAD
    xmlns:android="http://schemas.android.com/apk/res/android"
=======
    	xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> Rama-Edu-Android
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
 	android:fillViewport="true">
	<RelativeLayout
<<<<<<< HEAD
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:background="@drawable/fondo_nuevo">
=======
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:background="@drawable/fondo_nuevo">
>>>>>>> Rama-Edu-Android

	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
<<<<<<< HEAD
	        android:paddingTop="80dp"
=======
	        android:paddingTop="120dp"
>>>>>>> Rama-Edu-Android
	        android:orientation="vertical" >       	
			
       			<LinearLayout 
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
<<<<<<< HEAD
		            android:background="@color/lightGreen"
		            
		            android:orientation="horizontal" >
				    <!-- Distribución de 50% y 50% respectivamente 
				    	para los elementos agregados al layout. 
				    	El 100% del espacio disponible para estos elementos (botones),
				    	corresponde al layout_width del LinearLayout con un 
				    	valor de fill_parent.
				    	El valor para el layout_width de los botones lo hemos definido 
				    	con 0dp. Eso nos ayuda a decirle a nuestro diseño que resalte 
				    	la propiedad del peso y pueda distribuir equitativamente los 
				    	componentes sin importar lo extenso del contenido que tenga cada
				    	“celda”, tal y como si se trataran de porcentajes. 
				    -->
		    		<Button
		    		    android:id="@+id/button1"
				        android:layout_weight="1"	
				        android:textColor="@color/white"      
				        android:background="@color/darkGray"      
				        android:drawableRight="@drawable/lista_compra"		        		       
				        android:text="@string/lista_compra" 
				        android:textSize="20dp"
				        android:onClick="accederDespensa" 
				        
				    />
				</LinearLayout>
=======
		            android:background="@color/lightGreen"		            
		            android:orientation="horizontal" 
		            android:padding="10dp" 
		            android:layout_marginBottom="10dp"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp" >
			    <!-- Distribución de 50% y 50% respectivamente 
			     	para los elementos agregados al layout. 
			    	El 100% del espacio disponible para estos elementos (botones),
			    	corresponde al layout_width del LinearLayout con un 
			    	valor de fill_parent.
			    	El valor para el layout_width de los botones lo hemos definido 
			    	con 0dp. Eso nos ayuda a decirle a nuestro diseño que resalte 
			    	la propiedad del peso y pueda distribuir equitativamente los 
			    	componentes sin importar lo extenso del contenido que tenga cada
			    	“celda”, tal y como si se trataran de porcentajes.  -->
		    	    <Button
	       		    	android:id="@+id/button1"
	       		    	android:layout_width="0dp"
		    		android:layout_height="wrap_content"
				android:layout_weight="1"	
				android:textColor="@color/white"      
				android:background="@color/darkGray"      
				android:drawableRight="@drawable/lista_compra"		        		       
				android:text="@string/lista_compra" 
				android:textSize="20sp"
				android:onClick="accederDespensa" />
			</LinearLayout>
>>>>>>> Rama-Edu-Android
		
        
        		<LinearLayout 
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@color/lightGreen"
<<<<<<< HEAD
		            android:orientation="horizontal" >
				    
				    <Button
				        android:id="@+id/button2"
				        android:layout_weight="1"      
				        android:textColor="@color/white" 
				        android:background="@color/darkGray"     		        
				        android:drawableRight="@drawable/despensa"		        		             
				        android:text="@string/despensa" 
				        android:textSize="20dp"
				        android:onClick="accederDespensa" />
				
				</LinearLayout>
=======
		            android:orientation="horizontal" 
		            android:padding="10dp" 
		            android:layout_marginBottom="10dp"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp" >
				    
			    <Button
			        android:id="@+id/button2"
			        android:layout_width="0dp"
		    	        android:layout_height="wrap_content"
		    	        android:layout_weight="1"      
		            	android:textColor="@color/white" 
				android:background="@color/darkGray"     		        
				android:drawableRight="@drawable/despensa"		        		             
				android:text="@string/despensa" 
				android:textSize="20sp"
				android:onClick="accederDespensa" />
				
			</LinearLayout>
>>>>>>> Rama-Edu-Android
				
		        <LinearLayout 
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@color/lightGreen"
<<<<<<< HEAD
		            android:orientation="horizontal" >
				    
				    <Button
				        android:id="@+id/button3"
				        android:layout_weight="1"                        		  
=======
		            android:orientation="horizontal"
		            android:padding="10dp" 
		            android:layout_marginBottom="10dp" 
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp" >
				    
				    <Button
				        android:id="@+id/button3"
				        android:layout_width="0dp"
		    		    	android:layout_height="wrap_content"
		    		    	android:layout_weight="1"        
>>>>>>> Rama-Edu-Android
				        android:textColor="@color/white"    	
				        android:background="@color/darkGray"  	        
				        android:drawableRight="@drawable/recetario"		        		             
				        android:text="@string/recetario" 
<<<<<<< HEAD
				        android:textSize="20dp"
				        android:onClick="accederDespensa" />
				
				</LinearLayout>
=======
				        android:textSize="20sp"
				        android:onClick="accederDespensa" />
				
			</LinearLayout>
>>>>>>> Rama-Edu-Android
				
		        <LinearLayout 
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@color/lightGreen"
<<<<<<< HEAD
		            android:orientation="horizontal" >
				    
				    <Button
				        android:id="@+id/button4"
=======
		            android:orientation="horizontal" 
		            android:padding="10dp" 
		            android:layout_marginBottom="10dp"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp" >
				    
				    <Button
				        android:id="@+id/button4"
				        android:layout_width="0dp"
		    		    	android:layout_height="wrap_content"
>>>>>>> Rama-Edu-Android
				        android:layout_weight="1"                        		    
				        android:textColor="@color/white"   
				        android:background="@color/darkGray"   		        
				        android:drawableRight="@drawable/estadisticas"		        		             
				        android:text="@string/estadisticas" 
<<<<<<< HEAD
				        android:textSize="20dp"
				        android:onClick="accederDespensa" />
				
				</LinearLayout>
		        
        
		        
		        
   			</LinearLayout>

		</RelativeLayout>
=======
				        android:textSize="20sp"
				        android:onClick="accederDespensa" />
				
			</LinearLayout>

   	    </LinearLayout>

	</RelativeLayout>
>>>>>>> Rama-Edu-Android
</ScrollView>
